@@ -2,6 +2,8 @@
 HEAD
 ====
 Fixes:
+- xt_DNETMAP, xt_condition, xt_quota2: resolve compile error when
+  CONFIG_UIDGID_STRICT_TYPE_CHECKS=y
 - xt_RAWNAT: ensure correct operation in the presence of IPv4 options
 - xt_geoip: do not throw a warnings when country database is size 0
 - xt_quota2: print "!" at the correct position during iptables-save
